--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "mongoose": "^7.0.3",
     "nodemon": "^2.0.22",
     "socket.io": "^4.6.1"
   }
